# Prueba_Rapida

./: .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
include/: game.hpp  server.hpp
server/: .gitignore  CMakeLists.txt
server/include/: algorithms.hpp  game.hpp
server/src/: a-star.cpp  backtracking.cpp  bresenham_algorithm.cpp  genetic_algorithm.cpp  main.cpp
src/: backtracking.cpp  bresenham_algorithm.cpp  game.cpp  genetic_algorithm.cpp  main.cpp
